css/style.css
html {
    scroll-behavior: smooth;
}

li{
    cursor: pointer;
}

a{
    cursor: pointer;
}

button{
    cursor: pointer;
    font-family: 'Inter', sans-serif;
}

body {
    font-family: 'Inter',sans-serif;
    font-size: 22px;
    background: linear-gradient(-45deg, #FFFFFF, #fde9f9,#FFFFFF, #EBF1FF, #eedfff);
	background-size: 400% 400%;
    background-attachment: fixed;
    background-position: center;
	animation: gradient 10s ease infinite;
    min-height: 100vh;
}

#wrapper{
    overflow-x: hidden !important;
    overflow: hidden;
    scroll-behavior: smooth;
    /* overflow-y: auto; */
    position: relative;
}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.content{
    margin-left: 18%;
    margin-right: 18%;
    z-index: 1;
}

@media screen and (max-width: 1024px) {
    .content{
        margin-left: 5%;
        margin-right: 5%;
        position: relative;
        /* overflow: hidden; */
    }
}

* {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    list-style: none;
    box-sizing: border-box;
}

/* UTILITIES */

.reveal{
    position: relative;
    transform: translateY(150px);
    opacity: 0;
    transition: 1s all ease;
}

.reveal.active{
    transform: translateY(0);
    opacity: 1;
}

#slide-in{
    animation: slideIn 1s ease;
}

@keyframes slideIn {
    0% {
        transform: translateY(150px);
    }
    100% {
        transform: translateY(0);
    }
}

#slide-down{
    animation: slideDown 1s ease;
}

@keyframes slideDown {
    0% {
        transform: translateY(0);
    }
    100% {
        transform: translateY(150px);
    }
}

/* NAVBAR MENU */
.navbar li {
    list-style: none;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: #ffffffe8;
    transition: background-color 200ms linear;
}

.sticky + .content {
    padding-top: 102px;
}

.navbar {
    display: flex;
    align-items: center;
    width: 100%;
    z-index: 100;
    height: 12vmin;
    padding: 1rem;
}

.navbar-right{
    float: right;
}

.nav-links a {
    color: #8FA2C4;
    text-decoration: none;
}

.nav-links a:hover{
    color: #152950;
}

/*logo*/
.navbar img {
    float: left;
    padding-left: 2vmin;
    width: 10%;
}

.menu {
    display: flex;
    font-family: 'Outfit',serif;
    font-size: 2.5vmin;
    text-align: right;
    align-items: center;
    white-space: nowrap;
    color: #E6E9F8;
    z-index: 100 !important;
}


.menu li:hover {
    color: #152950;
    transition: 0.5s ease;
}

.menu li {
    padding: 4vmin;
}

.hamburger{
    display: none;
    font-size: 5vmax;
    user-select: none;
    padding: 3vmax;
}

input[type=checkbox] {
    display: none;
}

/* DROPDOWN MENU */
.our-team-navbar {
    position: relative;
}

.dropdown {
    background-color: white;
    position: absolute; /*WITH RESPECT TO PARENT*/
    display: none;
    top: 10vmin;
    left: -50%;
    z-index: 100;
}


.dropdown li {
    padding: 0.5em 1em;
    width: 15em;
    text-align: center;
}

.our-team-navbar:hover .dropdown {
    display: block;
}

.our-team-navbar:click .dropdown {
    display: block;
}

@media screen and (max-width: 1024px){
    .menu {
        display: none;
        position: absolute;
        background-color: #EBF1FF;
        right: 0;
        left: 0;
        text-align: center;
        padding: 16px 0;
        top: 12vmin;
        font-size: 1rem;
    }

    .menu li:hover {
        display: inline-block;
        background-color: #856E9F;
        width: 100%;
        transition: 0.3s ease;
    }

    .menu li + li {
        margin-top: 12vmin;
    }

    .nav-links a {
        color: #8FA2C4;
        text-decoration: none;
    }

    .menu a:hover{
        color: white;
        text-decoration: none;
        display: inline-block;
    }

    input[type=checkbox]:checked ~ .menu {
        display: block;
    }

    .hamburger {
        display: block;
        z-index: 100;
        text-align: center;
    }

    .dropdown {
        left: 10%;
        right: 10%;
        top: 15vmin;
        z-index: 100;
        text-align: center;
    }

    .dropdown li:hover {
        background-color: #856E9F;
        color: white;
    }


}

/*intro*/

.intro{
    /*padding-top: 50px;*/
    justify-content: center;
    padding-top: 10%;
    align-items: center;
}

.intro-container{
    float: left;
    padding-right: 60px;

}

.intro1{
    font-style: italic;
}

.intro2{
    font-family: 'Outfit',serif;
    font-size: 4vmax;
    font-weight:700;

}

.button-container{
    float: left;
    width: 50%;
    padding-top: 5%;
}

.get-involved{
    background-color: #856E9F;
    display: inline-block;
    font-size: 2vmax;
    padding: .5vmax;
    border-radius: 30px;
    font-weight: 500;
    width: 100%;
    color: white;
    border: none;
    font-family: 'Outfit', sans-serif;
}

.intro-body-container{
    font-size: 1.4vmax;
    /* position: relative; */
    overflow: hidden;
}

.intro-body1{
    padding-bottom: 2.5vmax;
}


/* .intro-body-container img{
    position: absolute;
    top: 10%;
    z-index: -1;
    width: 45%;
    opacity: 70%;
    overflow: hidden;
} */

.overflow-hidden{
    overflow-x: hidden;
    position: absolute;
    top: 1%;
    right: 10%;
    z-index: -1;
    width: 40%;
    opacity: 70%;
    overflow: hidden;
}

#overflow-hidden{
    overflow: hidden;
}
/* ... */

